	* bugfix #149: Add some missing [out] annotations to doxygen
	  parameters. Thanks aldot.
	* Fix build error on Solaris 10 with inet_ntop redeclaration error.
	* Fix -U flag with ldns-signzone. Thanks Ulrich and Jonathan
	* Enable compile of SVCB and HTTPS support by default.
	* bugfix #179: Free line memory even if zone file parsing fails
	  Thanks Claudius Zingerli

1.8.1	2021-12-03
	* bugfix #146: ldns-1.7.1 had soname 3.0, so ldns-1.8.x soname
	  needs to larger. Thanks Leah Neukirchen & Felipe Gasper
	* Undo PR#123 fix ldns.pc installation when building out-of-source
	  Thanks Axel Xu

1.8.0	2021-11-26
	* bugfix #38: Print "line" before line number when printing
	  zone parse errors. Thanks Petr Špaček.
	* bugfix: Revert unused variables in ldns-config removal patch.
	* bugfix #50: heap Out-of-bound Read vulnerability in
	  rr_frm_str_internal reported by pokerfacett.
	* bugfix #51: Heap Out-of-bound Read vulnerability in
	  ldns_nsec3_salt_data reported by pokerfacett.
	* Fix memory leak in examples/ldns-testns handle_tcp routine.
	* Detect fixed time memory compare for openssl 0.9.8.
	* Fix compile warning by variable initialisation for older gcc.
	* Fix #92: ldns-testns.c:429:15: error: 'fork' is unavailable: not
	  available on tvOS.
	* Fix for #93: fix packaging/libldns.pc Makefile rule.
	* ZONEMD support in ldns-signzone and ldns-verify-zone
	* ldns-testns can answer several queries over one tcp connection,
	  if they arrive within 100msec of each other.
	* Fix so that ldns-testns does not leak sockets if the read fails.
	* SVCB and HTTPS draft rrtypes.
	  Enable with --enable-rrtype-svcb-https.
	* bugfix #117: Assertion failure with DNSSEC validating of 
	  non existence of RR types at the root.  Thanks ZjYwMj
	* Set NSEC(3) ttls to the minimum of the MINIMUM field of the SOA
	  record and the TTL of the SOA itself. draft-ietf-dnsop-nsec-ttl
	* bugfix #119: Let example tools read longer RR's than
	  LDNS_MAX_LINELEN